--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node server"
+    "start": "nodemon --exec babel-node server/src",
+    "build": "babel server --out-file server/dist/index.js",
+    "serve": "node server/dist"
   },
   "keywords": [],
   "author": "",
