client updates and changes and strip actually integrated into python

--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:4061/",
   "eslintConfig": {
     "extends": "react-app"
   },
