--- a/client/package.json
+++ b/client/package.json
@@ -8,15 +8,15 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "@types/react": "^17.0.15",
+    "@types/react-dom": "^17.0.9",
     "axios": "^0.20.0",
-    "color": "^4.0.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
+    "color": "^3.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.3",
     "rxjs": "^6.6.2",
-    "typescript": "~3.7.2"
+    "typescript": "^4.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
