--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,8 @@
     ]
   },
   "devDependencies": {
-    "@types/color": "^3.0.2"
+    "@types/color": "^3.0.2",
+    "@types/react": "^17.0.15",
+    "@types/react-dom": "^17.0.9"
   }
 }
