--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.10.4",
+    "@reach/router": "^1.3.4",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1"
@@ -23,6 +24,7 @@
     "@babel/core": "^7.11.0",
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.11.0",
+    "@types/reach__router": "^1.3.9",
     "babel-preset-env": "^1.7.0",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.4"
